調整檔案格式

--- a/Hexschool/HtmlAndCss/EP01_2020 VS Code 網頁編輯器、HTML 基礎教學/index.html
+++ b/Hexschool/HtmlAndCss/EP01_2020 VS Code 網頁編輯器、HTML 基礎教學/index.html
@@ -15,7 +15,7 @@
     <p>P 段落</p>
     <p>備註：p*2 + tab鍵可快速產生兩個 p標籤</p>
     <br />
-    <img src="./img_01.jpg" alt="測試圖片" />
+    <img src="../css/img_01.jpg" alt="測試圖片" />
     <img
       src="https://www.google.com.tw/images/branding/googlelogo/1x/googlelogo_color_272x92dp.png"
       alt="測試圖片"
