--- a/Hexschool/HtmlAndCss/EP02_2020 CSS 常用語法/index.html
+++ b/Hexschool/HtmlAndCss/EP02_2020 CSS 常用語法/index.html
@@ -38,6 +38,6 @@
       Quisque venenatis, nisi ac semper viverra, leo orci suscipit urna, a
       vestibulum dolor libero vitae augue.
     </p>
-    <img src="./img_01.jpg" alt="測試圖片" />
+    <img src="../css/img_01.jpg" alt="測試圖片" />
   </body>
 </html>
